# CI-Test

./: .gitmodules  CMakeLists.txt
.github/workflows/: c-cpp.yml
game/: CMakeLists.txt
game/src/: main.cpp
src/: main.cpp
testing/: CMakeLists.txt
